[gd_scene load_steps=9 format=2]

[ext_resource path="res://levels/level-1.gd" type="Script" id=1]
[ext_resource path="res://src/ui/dialogue-system.tscn" type="PackedScene" id=2]
[ext_resource path="res://levels/scene-manager.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/cyber-tileset.tres" type="TileSet" id=4]
[ext_resource path="res://src/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/ui/level-intro.tscn" type="PackedScene" id=6]
[ext_resource path="res://src/targets/computer.tscn" type="PackedScene" id=7]
[ext_resource path="res://src/enemy/spawn-point.tscn" type="PackedScene" id=8]

[node name="Level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Dialogue_system" parent="CanvasLayer" instance=ExtResource( 2 )]

[node name="Level_intro" parent="CanvasLayer" instance=ExtResource( 6 )]
text = "Level 01 - Beginnings"

[node name="scene_manager" parent="." instance=ExtResource( 3 )]
wave_length = 3
wave_time = 5.0

[node name="Ground" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -196614, 9, 0, -196613, 18, 0, -196612, 18, 0, -196611, 18, 0, -196610, 18, 0, -196609, 18, 0, -262144, 18, 0, -262143, 18, 0, -262142, 18, 0, -262141, 18, 0, -262140, 18, 0, -262139, 18, 0, -262138, 18, 0, -262137, 18, 0, -262136, 18, 0, -262135, 18, 0, -262134, 18, 0, -262133, 18, 0, -262132, 18, 0, -262131, 18, 0, -262130, 18, 0, -262129, 18, 0, -262128, 18, 0, -262127, 18, 0, -262126, 18, 0, -262125, 18, 0, -262124, 18, 0, -262123, 18, 0, -262122, 18, 0, -262121, 18, 0, -262120, 18, 0, -131078, 18, 0, -131077, 18, 0, -131076, 18, 0, -131075, 18, 0, -131074, 18, 0, -131073, 18, 0, -196608, 18, 0, -196607, 18, 0, -196606, 18, 0, -196605, 18, 0, -196604, 18, 0, -196603, 18, 0, -196602, 18, 0, -196601, 18, 0, -196600, 18, 0, -196599, 18, 0, -196598, 18, 0, -196597, 18, 0, -196596, 18, 0, -196595, 18, 0, -196594, 18, 0, -196593, 18, 0, -196592, 18, 0, -196591, 18, 0, -196590, 18, 0, -196589, 18, 0, -196588, 18, 0, -196587, 18, 0, -196586, 18, 0, -196585, 9, 0, -196584, 18, 0, -65542, 18, 0, -65541, 18, 0, -65540, 18, 0, -65539, 18, 0, -65538, 18, 0, -65537, 9, 0, -131072, 9, 0, -131071, 9, 0, -131070, 9, 0, -131069, 9, 0, -131068, 18, 0, -131067, 18, 0, -131066, 18, 0, -131065, 18, 0, -131064, 18, 0, -131063, 18, 0, -131062, 18, 0, -131061, 18, 0, -131060, 9, 0, -131059, 8, 0, -131058, 18, 0, -131057, 18, 0, -131056, 18, 0, -131055, 18, 0, -131054, 18, 0, -131053, 18, 0, -131052, 18, 0, -131051, 18, 0, -131050, 9, 0, -131049, 18, 0, -131048, 18, 0, -6, 18, 0, -5, 18, 0, -4, 18, 0, -3, 18, 0, -2, 18, 0, -1, 18, 0, -65536, 18, 0, -65535, 18, 0, -65534, 18, 0, -65533, 18, 0, -65532, 18, 0, -65531, 18, 0, -65530, 18, 0, -65529, 18, 0, -65528, 18, 0, -65527, 18, 0, -65526, 8, 0, -65525, 8, 0, -65524, 8, 0, -65523, 8, 0, -65522, 8, 0, -65521, 18, 0, -65520, 18, 0, -65519, 18, 0, -65518, 18, 0, -65517, 18, 0, -65516, 18, 0, -65515, 18, 0, -65514, 18, 0, -65513, 18, 0, -65512, 18, 0, 65530, 18, 0, 65531, 18, 0, 65532, 18, 0, 65533, 9, 0, 65534, 18, 0, 65535, 18, 0, 0, 18, 0, 1, 18, 0, 2, 18, 0, 3, 18, 0, 4, 18, 0, 5, 18, 0, 6, 18, 0, 7, 18, 0, 8, 18, 0, 9, 8, 0, 10, 9, 0, 11, 18, 0, 12, 18, 0, 13, 18, 0, 14, 18, 0, 15, 18, 0, 16, 18, 0, 17, 8, 0, 18, 18, 0, 19, 18, 0, 20, 18, 0, 21, 18, 0, 22, 18, 0, 23, 18, 0, 24, 18, 0, 131066, 18, 0, 131067, 18, 0, 131068, 18, 0, 131069, 9, 0, 131070, 18, 0, 131071, 18, 0, 65536, 18, 0, 65537, 18, 0, 65538, 18, 0, 65539, 18, 0, 65540, 18, 0, 65541, 18, 0, 65542, 18, 0, 65543, 18, 0, 65544, 18, 0, 65545, 8, 0, 65546, 18, 0, 65547, 18, 0, 65548, 18, 0, 65549, 18, 0, 65550, 18, 0, 65551, 18, 0, 65552, 18, 0, 65553, 18, 0, 65554, 8, 0, 65555, 18, 0, 65556, 18, 0, 65557, 18, 0, 65558, 9, 0, 65559, 18, 0, 65560, 18, 0, 196602, 18, 0, 196603, 18, 0, 196604, 18, 0, 196605, 9, 0, 196606, 18, 0, 196607, 18, 0, 131072, 18, 0, 131073, 18, 0, 131074, 18, 0, 131075, 8, 0, 131076, 18, 0, 131077, 18, 0, 131078, 9, 0, 131079, 18, 0, 131080, 18, 0, 131081, 8, 0, 131082, 8, 0, 131083, 9, 0, 131084, 18, 0, 131085, 18, 0, 131086, 18, 0, 131087, 18, 0, 131088, 18, 0, 131089, 18, 0, 131090, 18, 0, 131091, 18, 0, 131092, 18, 0, 131093, 18, 0, 131094, 9, 0, 131095, 18, 0, 131096, 18, 0, 262138, 18, 0, 262139, 18, 0, 262140, 18, 0, 262141, 9, 0, 262142, 18, 0, 262143, 18, 0, 196608, 18, 0, 196609, 18, 0, 196610, 8, 0, 196611, 8, 0, 196612, 18, 0, 196613, 18, 0, 196614, 18, 0, 196615, 18, 0, 196616, 18, 0, 196617, 18, 0, 196618, 18, 0, 196619, 18, 0, 196620, 18, 0, 196621, 18, 0, 196622, 18, 0, 196623, 18, 0, 196624, 18, 0, 196625, 18, 0, 196626, 18, 0, 196627, 18, 0, 196628, 18, 0, 196629, 18, 0, 196630, 18, 0, 196631, 18, 0, 196632, 18, 0, 327674, 18, 0, 327675, 18, 0, 327676, 9, 0, 327677, 18, 0, 327678, 18, 0, 327679, 18, 0, 262144, 18, 0, 262145, 18, 0, 262146, 18, 0, 262147, 18, 0, 262148, 18, 0, 262149, 18, 0, 262150, 18, 0, 262151, 18, 0, 262152, 18, 0, 262153, 18, 0, 262154, 18, 0, 262155, 18, 0, 262156, 18, 0, 262157, 18, 0, 262158, 18, 0, 262159, 18, 0, 262160, 18, 0, 262161, 18, 0, 262162, 18, 0, 262163, 18, 0, 262164, 18, 0, 262165, 18, 0, 262166, 18, 0, 262167, 18, 0, 262168, 18, 0, 393210, 18, 0, 393211, 18, 0, 393212, 18, 0, 393213, 18, 0, 393214, 18, 0, 393215, 18, 0, 327680, 18, 0, 327681, 18, 0, 327682, 18, 0, 327683, 18, 0, 327684, 18, 0, 327685, 18, 0, 327686, 18, 0, 327687, 18, 0, 327688, 18, 0, 327689, 18, 0, 327690, 18, 0, 327691, 18, 0, 327692, 18, 0, 327693, 18, 0, 327694, 18, 0, 327695, 18, 0, 327696, 18, 0, 327697, 18, 0, 327698, 18, 0, 327699, 18, 0, 327700, 18, 0, 327701, 18, 0, 327702, 18, 0, 327703, 18, 0, 327704, 18, 0, 458746, 18, 0, 458747, 18, 0, 458748, 18, 0, 458749, 18, 0, 458750, 18, 0, 458751, 18, 0, 393216, 18, 0, 393217, 18, 0, 393218, 18, 0, 393219, 18, 0, 393220, 18, 0, 393221, 18, 0, 393222, 18, 0, 393223, 18, 0, 393224, 18, 0, 393225, 18, 0, 393226, 18, 0, 393227, 18, 0, 393228, 18, 0, 393229, 18, 0, 393230, 18, 0, 393231, 18, 0, 393232, 18, 0, 393233, 18, 0, 393234, 18, 0, 393235, 9, 0, 393236, 18, 0, 393237, 18, 0, 393238, 18, 0, 393239, 18, 0, 393240, 18, 0, 524282, 18, 0, 524283, 18, 0, 524284, 18, 0, 524285, 18, 0, 524286, 18, 0, 524287, 18, 0, 458752, 18, 0, 458753, 18, 0, 458754, 18, 0, 458755, 18, 0, 458756, 18, 0, 458757, 18, 0, 458758, 18, 0, 458759, 18, 0, 458760, 18, 0, 458761, 18, 0, 458762, 18, 0, 458763, 18, 0, 458764, 18, 0, 458765, 18, 0, 458766, 18, 0, 458767, 18, 0, 458768, 18, 0, 458769, 18, 0, 458770, 18, 0, 458771, 18, 0, 458772, 18, 0, 458773, 18, 0, 458774, 18, 0, 458775, 18, 0, 458776, 18, 0, 589818, 18, 0, 589819, 18, 0, 589820, 18, 0, 589821, 18, 0, 589822, 18, 0, 589823, 18, 0, 524288, 18, 0, 524289, 18, 0, 524290, 18, 0, 524291, 18, 0, 524292, 18, 0, 524293, 18, 0, 524294, 18, 0, 524295, 18, 0, 524296, 9, 0, 524297, 18, 0, 524298, 18, 0, 524299, 18, 0, 524300, 18, 0, 524301, 18, 0, 524302, 18, 0, 524303, 18, 0, 524304, 18, 0, 524305, 18, 0, 524306, 18, 0, 524307, 18, 0, 524308, 18, 0, 524309, 18, 0, 524310, 18, 0, 524311, 18, 0, 524312, 18, 0, 655354, 18, 0, 655355, 18, 0, 655356, 18, 0, 655357, 18, 0, 655358, 18, 0, 655359, 18, 0, 589824, 18, 0, 589825, 18, 0, 589826, 8, 0, 589827, 8, 0, 589828, 8, 0, 589829, 18, 0, 589830, 18, 0, 589831, 18, 0, 589832, 18, 0, 589833, 18, 0, 589834, 18, 0, 589835, 18, 0, 589836, 18, 0, 589837, 18, 0, 589838, 18, 0, 589839, 18, 0, 589840, 18, 0, 589841, 18, 0, 589842, 18, 0, 589843, 18, 0, 589844, 18, 0, 589845, 18, 0, 589846, 9, 0, 589847, 18, 0, 589848, 18, 0, 720890, 18, 0, 720891, 18, 0, 720892, 18, 0, 720893, 18, 0, 720894, 18, 0, 720895, 18, 0, 655360, 18, 0, 655361, 18, 0, 655362, 18, 0, 655363, 18, 0, 655364, 18, 0, 655365, 8, 0, 655366, 8, 0, 655367, 8, 0, 655368, 18, 0, 655369, 18, 0, 655370, 18, 0, 655371, 18, 0, 655372, 18, 0, 655373, 18, 0, 655374, 18, 0, 655375, 18, 0, 655376, 18, 0, 655377, 18, 0, 655378, 18, 0, 655379, 18, 0, 655380, 18, 0, 655381, 18, 0, 655382, 18, 0, 655383, 18, 0, 655384, 18, 0, 786426, 18, 0, 786427, 18, 0, 786428, 9, 0, 786429, 9, 0, 786430, 18, 0, 786431, 18, 0, 720896, 18, 0, 720897, 18, 0, 720898, 18, 0, 720899, 18, 0, 720900, 18, 0, 720901, 18, 0, 720902, 18, 0, 720903, 18, 0, 720904, 18, 0, 720905, 18, 0, 720906, 18, 0, 720907, 18, 0, 720908, 18, 0, 720909, 18, 0, 720910, 18, 0, 720911, 18, 0, 720912, 18, 0, 720913, 9, 0, 720914, 18, 0, 720915, 18, 0, 720916, 18, 0, 720917, 18, 0, 720918, 18, 0, 720919, 18, 0, 720920, 18, 0, 851962, 18, 0, 851963, 18, 0, 851964, 18, 0, 851965, 18, 0, 851966, 9, 0, 851967, 9, 0, 786432, 9, 0, 786433, 18, 0, 786434, 18, 0, 786435, 18, 0, 786436, 18, 0, 786437, 18, 0, 786438, 18, 0, 786439, 18, 0, 786440, 18, 0, 786441, 9, 0, 786442, 18, 0, 786443, 18, 0, 786444, 18, 0, 786445, 18, 0, 786446, 18, 0, 786447, 18, 0, 786448, 8, 0, 786449, 8, 0, 786450, 8, 0, 786451, 8, 0, 786452, 8, 0, 786453, 18, 0, 786454, 18, 0, 786455, 18, 0, 786456, 18, 0, 917498, 18, 0, 917499, 18, 0, 917500, 18, 0, 917501, 9, 0, 917502, 9, 0, 917503, 18, 0, 851968, 18, 0, 851969, 18, 0, 851970, 18, 0, 851971, 18, 0, 851972, 18, 0, 851973, 18, 0, 851974, 9, 0, 851975, 18, 0, 851976, 18, 0, 851977, 18, 0, 851978, 18, 0, 851979, 18, 0, 851980, 18, 0, 851981, 18, 0, 851982, 18, 0, 851983, 18, 0, 851984, 18, 0, 851985, 18, 0, 851986, 18, 0, 851987, 18, 0, 851988, 18, 0, 851989, 18, 0, 851990, 18, 0, 851991, 18, 0, 851992, 18, 0 )

[node name="Floor" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 196606, 6, 0, 196607, 6, 0, 131072, 6, 0, 131084, 7, 0, 131085, 7, 0, 131086, 7, 0, 131087, 7, 0, 131088, 7, 0, 262142, 6, 0, 262143, 6, 0, 196608, 6, 0, 196620, 7, 0, 196621, 7, 0, 196622, 7, 0, 196623, 7, 0, 196624, 7, 0, 327678, 6, 0, 327679, 6, 0, 262144, 6, 0, 262145, 6, 0, 262146, 6, 0, 262147, 6, 0, 262148, 6, 0, 262149, 6, 0, 262150, 6, 0, 262155, 7, 0, 262156, 7, 0, 262157, 7, 0, 262158, 7, 0, 262159, 7, 0, 262160, 7, 0, 393214, 6, 0, 393215, 6, 0, 327680, 6, 0, 327681, 6, 0, 327682, 6, 0, 327683, 6, 0, 327684, 6, 0, 327685, 6, 0, 327686, 6, 0, 327691, 7, 0, 327692, 7, 0, 327693, 7, 0, 327694, 7, 0, 327695, 7, 0, 327696, 7, 0, 458750, 6, 0, 458751, 6, 0, 393216, 6, 0, 393217, 6, 0, 393218, 6, 0, 393219, 6, 0, 393220, 6, 0, 393221, 6, 0, 393222, 6, 0, 393223, 6, 0, 393224, 6, 0, 393225, 6, 0, 393226, 6, 0, 393227, 7, 0, 393228, 7, 0, 393229, 7, 0, 393230, 7, 0, 393231, 7, 0, 393232, 7, 0, 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0, 458754, 6, 0, 458755, 6, 0, 458756, 6, 0, 458757, 6, 0, 458758, 6, 0, 458759, 6, 0, 458760, 6, 0, 458761, 6, 0, 458762, 6, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 7, 0, 458767, 7, 0, 458768, 7, 0, 589822, 6, 0, 589823, 6, 0, 524288, 6, 0, 524289, 6, 0, 524290, 6, 0, 524291, 6, 0, 524292, 6, 0, 524293, 6, 0, 524294, 6, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0 )

[node name="Building" type="TileMap" parent="."]
tile_set = ExtResource( 4 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( -262151, 14, 0, -262150, 2, 0, -262149, 2, 0, -262148, 2, 0, -262147, 2, 0, -262146, 2, 0, -262145, 2, 0, -327680, 2, 0, -327679, 2, 0, -327678, 2, 0, -327677, 2, 0, -327676, 2, 0, -327675, 2, 0, -327674, 2, 0, -327673, 2, 0, -327672, 2, 0, -327671, 2, 0, -327670, 2, 0, -327669, 2, 0, -327668, 2, 0, -327667, 2, 0, -327666, 2, 0, -327665, 2, 0, -327664, 2, 0, -327663, 2, 0, -327662, 2, 0, -327661, 2, 0, -327660, 2, 0, -327659, 2, 0, -327658, 2, 0, -327657, 2, 0, -327656, 2, 0, -327655, 15, 0, -196615, 5, 0, -262119, 5, 0, -131079, 5, 0, -196583, 5, 0, -65543, 5, 0, -131047, 5, 0, -7, 5, 0, -65525, 14, 0, -65524, 2, 0, -65523, 2, 0, -65522, 2, 0, -65521, 2, 0, -65520, 2, 0, -65519, 15, 0, -65511, 5, 0, 65529, 5, 0, 11, 5, 0, 17, 5, 0, 25, 5, 0, 131065, 5, 0, 131069, 14, 0, 131070, 2, 0, 131071, 2, 0, 65536, 2, 0, 65537, 15, 0, 65547, 5, 0, 65553, 5, 0, 65561, 5, 0, 196601, 5, 0, 196605, 5, 0, 131073, 5, 0, 131083, 5, 0, 131089, 5, 0, 131097, 5, 0, 262137, 5, 0, 262141, 5, 0, 196609, 16, 0, 196610, 2, 0, 196611, 2, 0, 196612, 2, 0, 196613, 2, 0, 196614, 2, 0, 196615, 15, 0, 196619, 1, 0, 196625, 5, 0, 196633, 5, 0, 327673, 5, 0, 327677, 5, 0, 262151, 5, 0, 262161, 5, 0, 262169, 5, 0, 393209, 5, 0, 393213, 5, 0, 327687, 1, 0, 327697, 5, 0, 327705, 5, 0, 458745, 5, 0, 458749, 5, 0, 393233, 5, 0, 393241, 5, 0, 524281, 5, 0, 524285, 5, 0, 458769, 5, 0, 458777, 5, 0, 589817, 5, 0, 589821, 5, 0, 524295, 0, 0, 524299, 0, 0, 524305, 5, 0, 524313, 5, 0, 655353, 5, 0, 655357, 16, 0, 655358, 2, 0, 655359, 2, 0, 589824, 2, 0, 589825, 2, 0, 589826, 2, 0, 589827, 2, 0, 589828, 2, 0, 589829, 2, 0, 589830, 2, 0, 589831, 17, 0, 589835, 5, 0, 589841, 5, 0, 589849, 5, 0, 720889, 5, 0, 655371, 16, 0, 655372, 2, 0, 655373, 2, 0, 655374, 2, 0, 655375, 2, 0, 655376, 2, 0, 655377, 17, 0, 655385, 5, 0, 786425, 5, 0, 720921, 5, 0, 851961, 5, 0, 786457, 5, 0, 917497, 5, 0, 851993, 5, 0, 983033, 16, 0, 983034, 2, 0, 983035, 2, 0, 983036, 2, 0, 983037, 2, 0, 983038, 2, 0, 983039, 2, 0, 917504, 2, 0, 917505, 2, 0, 917506, 2, 0, 917507, 2, 0, 917508, 2, 0, 917509, 2, 0, 917510, 2, 0, 917511, 2, 0, 917512, 2, 0, 917513, 2, 0, 917514, 2, 0, 917515, 2, 0, 917516, 2, 0, 917517, 2, 0, 917518, 2, 0, 917519, 2, 0, 917520, 2, 0, 917521, 2, 0, 917522, 2, 0, 917523, 2, 0, 917524, 2, 0, 917525, 2, 0, 917526, 2, 0, 917527, 2, 0, 917528, 2, 0, 917529, 17, 0 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 145.903, 79.6873 )

[node name="Computer" parent="." instance=ExtResource( 7 )]
position = Vector2( 230.853, 95.7412 )
infect = true

[node name="Computer3" parent="." instance=ExtResource( 7 )]
visible = false
position = Vector2( 230.853, 95.7412 )

[node name="Computer2" parent="." instance=ExtResource( 7 )]
position = Vector2( 37.2359, 100.774 )

[node name="spawn_points" type="Node2D" parent="."]

[node name="Spawn_point" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -67.8552, -132.526 )

[node name="Spawn_point2" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 18.5744, -133.648 )

[node name="Spawn_point3" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 97.1467, -135.332 )

[node name="Spawn_point4" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 180.209, -139.26 )

[node name="Spawn_point5" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 266.638, -146.556 )

[node name="Spawn_point6" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 345.211, -145.995 )

[node name="Spawn_point7" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 424.344, -143.75 )

[node name="Spawn_point8" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 497.866, -84.8209 )

[node name="Spawn_point9" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 497.866, 10.5883 )

[node name="Spawn_point10" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 504.039, 89.1607 )

[node name="Spawn_point11" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 508.529, 156.508 )

[node name="Spawn_point12" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 503.478, 223.856 )

[node name="Spawn_point13" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 481.029, 291.204 )

[node name="Spawn_point14" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 378.324, 295.132 )

[node name="Spawn_point15" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 296.945, 294.571 )

[node name="Spawn_point16" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 225.669, 297.939 )

[node name="Spawn_point17" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 166.74, 301.867 )

[node name="Spawn_point18" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 87.6061, 297.377 )

[node name="Spawn_point19" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( 25.3094, 297.939 )

[node name="Spawn_point20" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -47.0894, 299.061 )

[node name="Spawn_point21" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -121.733, 299.061 )

[node name="Spawn_point22" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -194.693, 288.398 )

[node name="Spawn_point23" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -202.55, 226.662 )

[node name="Spawn_point24" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -200.305, 158.192 )

[node name="Spawn_point25" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -199.744, 89.7218 )

[node name="Spawn_point26" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -201.989, 17.8842 )

[node name="Spawn_point27" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -203.673, -53.3921 )

[node name="Spawn_point28" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -190.203, -121.862 )

[node name="Spawn_point29" parent="spawn_points" instance=ExtResource( 8 )]
position = Vector2( -123.978, -131.403 )

[connection signal="finished_dialogue" from="CanvasLayer/Dialogue_system" to="." method="_on_Dialogue_system_finished_dialogue"]
[connection signal="end_level_intro" from="CanvasLayer/Level_intro" to="." method="_on_Level_intro_end_level_intro"]
[connection signal="healed" from="Computer" to="." method="_on_Computer_healed"]
